2003-01-09 1.2.02 Jeekay
* Fixed STATUS annoyance with MAXLOGINS and users authed clients in channels
* Removed various CTCP replies
* Bumped version to 1.2.02

2002-11-09 1.2.01 Jeekay
* Added logging to UPDATEDB
* Made SET INVISIBLE on channels actually check for channel access (duh)
* Made FLOATGRACE functional again.
* Made STATUS not show COMMENT flag on channels to non-admins
* Bumped version to 1.2.01

2002-11-05 1.2.00 Jeekay
* Added USERFLAGS setting '3' to set autovoice for 25-99 and autoop for 100+
  when users are added.
* Added the keyword 'COMMENTS' to the output of STATUS if a channel has an
  active comment for it.
* Added channel flag INVISIBLE to prevent people without access in the
  channel seeing the channel access lists.
* Altered behaviour of get(Admin)AccessLevel to return 0 if either argument
  is a null pointer.
* Removed various unused flags from sqlChannel
* Bumped version to 1.2.00 - I think we've made enough changes to justify
  this.
* Started maintaining ChangeLog again

22/1/2001 ULtimaTe_
Added WELCOME message onjoin
db needs next field:
	ALTER TABLE channels ADD COLUMN welcome VARCHAR(255);

23/1/2001 ULtimaTe_
Added COMMENT command like CSC requested it.
db update:
	ALTER TABLE users ADD COLUMN comment VARCHAR(300);


23/1/2001 ULtimaTe_
Added FEATURE_FORCELOG. Can be (un)defined in cservice_commands.h
Logs ADDUSER, BAN, CLEARMODE, DEOP, DEVOICE, INVITE, JOIN, KICK, MODINFO, OP,
PART, REMUSER, SET, SUSPEND, TOPIC, UNBAN, UNSUSPEND, VOICE into forcelog table
(overriden for coderlevel (>900))
Run update.sql script to add the table.
