@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# "$Id: Makefile.am,v 1.15 2002-10-20 02:12:07 jeekay Exp $"
+# "$Id: Makefile.am,v 1.16 2003-01-14 17:08:11 jeekay Exp $"
 
 lib_LTLIBRARIES = libcservice.la
 libcservice_la_LDFLAGS = -module -export-dynamic -L@PGSQL_LIB@ \
@@ -44,6 +44,7 @@ libcservice_la_SOURCES = cservice.cc \
 	MOTDCommand.cc \
 	NEWPASSCommand.cc \
 	NOTECommand.cc \
+	OFFICIALCommand.cc \
 	OPCommand.cc \
 	OPERJOINCommand.cc \
 	OPERPARTCommand.cc \
