@@ -1,5 +1,5 @@
 #ifndef __CSERVICECOMMANDS_H
-#define __CSERVICECOMMANDS_H "$Id: cserviceCommands.h,v 1.16 2002-10-20 02:12:10 jeekay Exp $"
+#define __CSERVICECOMMANDS_H "$Id: cserviceCommands.h,v 1.17 2003-01-14 17:08:12 jeekay Exp $"
 
 #include	<string>
 #include	"iClient.h"
@@ -128,6 +128,7 @@ DECLARE_COMMAND( GSUSPEND )
 DECLARE_COMMAND( GUNSUSPEND )
 DECLARE_COMMAND( GLOBNOTICE )
 DECLARE_COMMAND( INVME ) 
+DECLARE_COMMAND( OFFICIAL )
 DECLARE_COMMAND( PURGE )
 DECLARE_COMMAND( QUOTE )
 DECLARE_COMMAND( REGISTER )
